# mt5-connector

./: .gitignore  LICENSE  README.md  check_connectivity.py  download_csvs.py  env.example  pyproject.toml  test_mt5_connection.py
.github/workflows/: publish.yml  test.yml
data/: XAUUSD_15min.csv  XAUUSD_1hour.csv  XAUUSD_30min.csv  XAUUSD_4hour.csv  XAUUSD_5min.csv  XAUUSD_daily.csv
examples/: backtest_eurusd.py  backtest_xauusd_fvg.py  download_historical_data.py  download_xauusd.py  live.py  live_simple_strategy.py  test_place_order.py
mt5connect/: config.py  connection.py  constants.py  data.py  downloader.py  errors.py  execution.py  factories.py  parsing.py  providers.py
nautilus_mt5/: config.py  connection.py  constants.py  data.py  downloader.py  errors.py  execution.py  factories.py  parsing.py  providers.py
tests/: conftest.py  test_connection.py  test_data.py  test_downloader.py  test_execution.py  test_factories.py  test_parsing.py  test_providers.py
