[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5connect"
version = "0.1.1"
description = "NautilusTrader adapter for MetaTrader 5 — live trading and backtesting on any MT5 broker"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "mt5connect contributors" },
]
keywords = [
    "algorithmic-trading",
    "metatrader5",
    "mt5",
    "forex",
    "nautilus-trader",
    "backtesting",
    "live-trading",
    "exness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nautilus_trader>=1.190.0",
    "MetaTrader5>=5.0.45",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage   = "https://github.com/aulekator/mt5-connect"
Repository = "https://github.com/aulekator/mt5-connect"
Issues     = "https://github.com/aulekator/mt5-connect/issues"
Changelog  = "https://github.com/aulekator/mt5-connect/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["mt5connect"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
